--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ Flask-SQLAlchemy==2.4.3
 Flask-Login==0.4.0
 Flask-Migrate==2.0.2
 requests==2.8.1
+mysqlclient==2.0.3
+MySQL-python==1.2.4
+mysql-connector-python==2.0.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
