--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,25 @@
+alembic==1.7.5
 aniso8601==8.0.0
+certifi==2021.10.8
+charset-normalizer==2.0.10
 click==7.1.2
+colorama==0.4.4
 Flask==1.1.2
+Flask-Login==0.5.0
+Flask-Migrate==3.1.0
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.3
-Flask-Login==0.4.0
-Flask-Migrate==2.0.2
-requests==2.8.1
-mysqlclient==2.0.3
-mysql-connector-python==2.0.2
+gunicorn==20.1.0
+idna==3.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
+Mako==1.1.6
 MarkupSafe==1.1.1
+mysql==0.0.3
+mysqlclient==2.1.0
 pytz==2020.1
+requests==2.27.1
 six==1.15.0
 SQLAlchemy==1.3.18
+urllib3==1.26.8
 Werkzeug==1.0.1
-gunicorn==20.1.0
